<resources>
    <string name="app_name">StudizPrototype</string>
    <string name="title_activity_homepage1">Studiz</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="maps">Maps</string>
    <string name="title_activity_kategorier">Kategorier</string>
    <string name="catbar">Barer og Diskoteker</string>
    <string name="expandall">Expand all</string>
    <string name="catbooks">Bøger og Studie</string>
    <string name="catrestaurant">Cafeer og Restauranter</string>
    <string name="catelectronic">Elektronik og IT</string>
    <string name="catfreetime">Fritid og Fornøjelse</string>
    <string name="catshop">Indretning og Dagligvare</string>
    <string name="catfashion">Mode</string>
    <string name="cattransport">Rejser og Transport</string>
    <string name="catbeauty">Skønhed og Velvare</string>
    <string name="catsport">Sport og Fitness</string>
    <string name="cathealt">Sundhed og Helse</string>
    <string name="Studiekort">Studiekort</string>
    <string name="settings">Indstillinger</string>
    <string name="hjemmeside">Brug rabat</string>
    <string name="Studizfrontpage">For Students By Student</string>
    <string name="studiz">Studiz</string>
    <string name="login">Opret Konto</string>
    <string name="search">Søg</string>
</resources>