<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".categories">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/catbar" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/searchicon" />

        </RelativeLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categories"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:padding="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >

            <Button
                android:id="@+id/bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:onClick="goTobar"
                android:padding="20dp" />


            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="goTobar"
                android:padding="25dp"
                android:text="@string/catbar"
                android:textSize="20sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:onClick="goTobar"
                android:src="@drawable/catbar" />




        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="goTobooks"
                android:padding="25dp"
                android:text="@string/catbooks"
                android:textSize="20sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:onClick="goTobooks"
                android:src="@drawable/catbooks" />

            <Button
                android:id="@+id/books"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:onClick="goTobooks"
                android:padding="20dp" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="goTorestaurant"
                android:padding="25dp"
                android:text="@string/catrestaurant"
                android:textSize="20sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:onClick="goTorestaurant"
                android:src="@drawable/catrestaurant" />

            <Button
                android:id="@+id/restaurant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:onClick="goTorestaurant"
                android:padding="20dp" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="goToit"
                android:padding="25dp"
                android:text="@string/catelectronic"
                android:textSize="20sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:onClick="goToit"
                android:src="@drawable/catelectronic" />

            <Button
                android:id="@+id/it"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:onClick="goToit"
                android:padding="20dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="goTofreetime"
                android:padding="25dp"
                android:text="@string/catfreetime"
                android:textSize="20sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:onClick="goTofreetime"
                android:src="@drawable/catfreetime" />

            <Button
                android:id="@+id/freetime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:onClick="goTofreetime"
                android:padding="20dp" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="goToshopping"
                android:padding="25dp"
                android:text="@string/catshop"
                android:textSize="20sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:onClick="goToshopping"
                android:src="@drawable/catshop" />

            <Button
                android:id="@+id/shopping"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:onClick="goToshopping"
                android:padding="20dp" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="goTofashion"
                android:padding="25dp"
                android:text="@string/catfashion"
                android:textSize="20sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:onClick="goTofashion"
                android:src="@drawable/catfashion" />

            <Button
                android:id="@+id/fashion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:onClick="goTofashion"
                android:padding="20dp" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="goTotransport"
                android:padding="25dp"
                android:text="@string/cattransport"
                android:textSize="20sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:onClick="goTotransport"
                android:src="@drawable/cattransport" />

            <Button
                android:id="@+id/transport"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:onClick="goTotransport"
                android:padding="20dp" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="goTobeauty"
                android:padding="25dp"
                android:text="@string/catbeauty"
                android:textSize="20sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:onClick="goTobeauty"
                android:src="@drawable/catbeauty" />

            <Button
                android:id="@+id/beauty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:onClick="goTobeauty"
                android:padding="20dp" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="goTosport"
                android:padding="25dp"
                android:text="@string/catsport"
                android:textSize="20sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:onClick="goTosport"
                android:src="@drawable/catsport" />

            <Button
                android:id="@+id/sport"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:onClick="goTosport"
                android:padding="20dp" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="goTohealth"
                android:padding="25dp"
                android:text="@string/cathealt"
                android:textSize="20sp" />


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:onClick="goTohealth"
                android:src="@drawable/cathealt" />

            <Button
                android:id="@+id/health"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:onClick="goTohealth"
                android:padding="20dp" />



        </RelativeLayout>

    </LinearLayout>
</ScrollView>